--- a/package.json
+++ b/package.json
@@ -72,11 +72,11 @@
     "webpack": "node --max_old_space_size=4096 node_modules/webpack/bin/webpack.js"
   },
   "dependencies": {
-    "@angular/cli": "^6.0.8",
-    "@angular/compiler-cli": "^6.0.6",
     "@angular/animations": "^6.0.6",
+    "@angular/cli": "^6.0.8",
     "@angular/common": "^6.0.6",
     "@angular/compiler": "^6.0.6",
+    "@angular/compiler-cli": "^6.0.6",
     "@angular/core": "^6.0.6",
     "@angular/forms": "^6.0.6",
     "@angular/platform-browser": "^6.0.6",
@@ -85,8 +85,10 @@
     "@angular/router": "^6.0.6",
     "@types/xlsx": "0.0.36",
     "core-js": "^2.5.7",
+    "express": "^4.16.4",
     "http-server": "^0.11.1",
     "ie-shim": "^0.1.0",
+    "path": "^0.12.7",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.2.1",
     "ts-xlsx": "0.0.11",
