--- a/package.json
+++ b/package.json
@@ -130,9 +130,9 @@
     "karma-mocha-reporter": "^2.2.5",
     "karma-remap-coverage": "^0.1.5",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^3.0.0",
+    "karma-webpack": "^4.0.0-rc.5",
     "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.10.0",
     "npm-run-all": "^4.1.3",
     "optimize-js-plugin": "^0.0.4",
     "parse5": "^5.0.0",
@@ -146,8 +146,8 @@
     "string-replace-loader": "^2.1.1",
     "style-loader": "^0.21.0",
     "to-string-loader": "^1.1.5",
-    "ts-node": "^7.0.0",
     "ts-loader": "^4.3.0",
+    "ts-node": "^7.0.0",
     "tslib": "^1.9.3",
     "tslint": "^5.10.0",
     "tslint-loader": "^3.6.0",
